--- a/app/view/index.html
+++ b/app/view/index.html
@@ -33,12 +33,11 @@
 	<p>
 	Manufacturing class:
 <select name="manufacturing-classes" id="manufacturing-classes">
-	<option value="class1">Class 1</option>
-	<option value="class2">Class 2</option>
-	<option value="class3">Class 3</option>
-	<option value="class4">Class 4</option>
-	<option value="class5">Class 5</option>
-	<option value="class6">Class 6</option>
+	<option value="upper_subperiost_implant">upper_subperiost_implant</option>
+	<option value="bridge">bridge</option>
+	<option value="front_lower_bridge">front_lower_bridge</option>
+	<option value="solo_crown">solo_crown</option>
+	<option value="bar">bar</option>
 </select>
 	</p>
       </div>
