Replaced the last few occurrences of DITAC with ProMED...

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -16,7 +16,7 @@
             width="167">
         </a>
         <h1 class='title'>
-            DITAC Cable Problem Interface
+            ProMED ML Tool Interface
         </h1>
         <p class="info">
             Developed by Andrea Ranieri - CNR-IMATI
@@ -49,36 +49,6 @@
       </div>
     </div>
 
-
-<!--
-    <p class="text" style="color:crimson;text-decoration:none;">
-        Please load your KistlerFile in .csv format to get a prediction
-    </p>
-    <div class='content'>
-      <div class='select'>
-      <div class='no-display'>
-        <input id='file-input'
-               class='no-display'
-               type='file'
-               name='file'
-               accept='csv/*'
-               onchange='showPicked(this)'>
-      </div>
-      <button class='choose-file-button' type='button' onclick='showPicker()'>Select KistlerFile</button>
-      <div class='upload-label'>
-        <label id='upload-label'>No file chosen</label>
-      </div>
-      <div>
-        <img id='image-picked' class='no-display' alt='Selected KistlerFile' height='200'>
-      </div>
-    </div>
-      <div class='analyze'>
-        <button id='analyze-button' class='analyze-button' type='button' onclick='analyze()'>Analyze</button>
-        <div class='result-label'>
-            <label id='result-label'></label>
-        </div>
-      </div>
--->
     </div>
     </div>
     <div class='more'>
